# movie-normalizer

./: Dockerfile  README.md  deploy.sh  executer.sh  pyproject.toml  run-local.sh
.devcontainer/: Dockerfile  devcontainer.example.json
app/: main.py
app/lib/: logger.py  movie_normalizer.py
develop/: movie-normalize.ipynb
