[tool.poetry]
name = "movie-normalizer"
version = "1.0.0"
description = ""
authors = ["Maximilian Neudert <max@neuds.de>"]
readme = "README.md"
packages = [{include = "*", from="app"}]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.14,<3.15"
numpy = "^2.3"
pandas = "^2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6"
tqdm = "^4"
ipywidgets = "^8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


